# src/bcs/crates/adapters/http/bcs-api-http/src/v1/openapi/dto/mod.rs
@@ -4,6 +4,7 @@ pub mod collaboration_definition;
 pub mod channel;
 pub mod event_subscription;
 pub mod friendship;
+pub mod friend_connection;
 pub mod group;
 pub mod invitation;
 pub mod session;
